--- a/Web/webpage.html
+++ b/Web/webpage.html
@@ -5,7 +5,8 @@
     <title>ZT Calculator</title>
 </head>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
 
 <body>
 
@@ -15,6 +16,8 @@
     <br>
 
     <button type="button" onclick='setToText()'>Set To Text</button>
+
+    <button type="button" onclick='OpenInput()'>Set To File</button>
 
     <br>
 
@@ -28,8 +31,7 @@
 
     <span id = "output" style="white-space: pre-wrap">output text</span>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    
 </body>
 
 </html>
