Add download link

--- a/Web/webpage.html
+++ b/Web/webpage.html
@@ -29,6 +29,10 @@
 
     <br>
 
+    <a id="download_link" download="Data_Calculated.csv" href="" >Download as CSV File</a>
+
+    <br>
+
     <span id = "output" style="white-space: pre-wrap">output text</span>
 
     
